--- a/examples/step-57/doc/results.dox
+++ b/examples/step-57/doc/results.dox
@@ -2,6 +2,10 @@
 
 Now we use the method we discussed above to solve Navier Stokes equations with viscosity 1/400 and 1/10000. 
 
+<h3> Test case 1: Re=400 </h3>
+
+In the first test case the viscosity is set to be 1/400. As we disccussed in introduction, the initial guess is the soluton to corresponding Stokes problem. In the following table, the residuals at each Newton's iteration on every mesh is shown. By the data in the table, it shows the convergence rate of Newton's iteration is quadratic. 
+
 <table align="center" border="1">
   
   <tr>
@@ -112,7 +116,47 @@ Now we use the method we discussed above to solve Navier Stokes equations with v
   </tr>
 </table>
 
+The following is the generated grids during solving. For this case of Re=400, the initial guess is obtianed by solving Stokes on $8 \times 8$ mesh, and the mesh is refined adaptively. Between meshs, the solution from coarse is transfered to fine mesh as an initial guess.  
 
+<TABLE WIDTH="60%" ALIGN="center">
+  <tr>
+    <td ALIGN="center">
+      <img src="step-57_Re400_Mesh0.png" alt="">
+    </td>
+    <td ALIGN="center">
+      <img src="step-57_Re400_Mesh1.png" alt="">
+    </td>
+  </tr>
+
+  <tr>
+    <td ALIGN="center">
+      <img src="step-57_Re400_Mesh2.png" alt="">
+    </td>
+    <td ALIGN="center">
+      <img src="step-57_Re400_Mesh3.png" alt="">
+    </td>
+  </tr>
+
+  <tr>
+    <td ALIGN="center">
+      <img src="step-57_Re400_Mesh4.png" alt="">
+    </td>
+  </tr>
+</table>
+
+This picture is the graphical result of lid-drive cavity with Re=400.
+<img src="step-57_Re400_Streamline.png" alt="">
+Then the solution by Newton's iteration is compared with a reference solution from High-Re Solutions for Incompressible Flow Using the Navier-Stokes Equations and a Multigrid Method, U. Ghia, K.N.Ghia and C.T.Shin. 
+<img src="step-57_Re400_compare.svg" alt="">
+ 
+<h3> Test case 1: Re=10000 </h3>
+
+Newton's iteration requires a good initial guess. However, the nonlinear term gets dominant when Reynold number is large, so that the solution to Stokes equations may be far away from the exact solution. If the Stokes solution acts as the initial guess, the convergence will be lost. The following picture shows that the residual can not get lower as iteration going on. 
+<img src="step-57_Re10000_loss_convergence.svg" alt="">
+The initial guess, therefore, have to be obtained via a staircase which has been discuessed in introduction. Here the step size is 2000 and the initial mesh is of size $32 \times 32$. After obtaining an initial guess, the mesh is refined as in previous test case. The following picture shows that at each stair Newton's iteration has quadratic convergence and the convergence rate is also quadratic on every refined mesh. 60 steps of Newton's iterations are excuted for solving this test case. 
+<img src="step-57_Re10000_get_convergence.svg" alt="">
+
+Also we show the residual from each step of Newton's iteration on every mesh. The quadratic convergence is shown clearly in the table.
 <table align="center" border="1">
   
   <tr>
@@ -140,154 +184,165 @@ Now we use the method we discussed above to solve Navier Stokes equations with v
 
   <tr>
     <th>1          </th>
-    <th>1.2445e-3  </th>
-    <th>6          </th>
-    <th>3.9559e-3  </th>
-    <th>4          </th>
-    <th>4.8617e-3  </th>
+    <th>4.56686e-05  </th>
+    <th>7          </th>
+    <th>0.00483666  </th>
     <th>3          </th>
-    <th>4.8675e-3  </th>
+    <th>0.00174361  </th>
     <th>3          </th>
-    <th>2.8146e-4  </th>
-    <th>3          </th>
+    <th>0.000561148  </th>
+    <th>2          </th>
+    <th>2.06674e-04  </th>
+    <th>2         </th>
   </tr>
 
   <tr>
     <th>2         </th>
-    <th>2.4948e-13</th>
+    <th>2.40772e-06</th>
+    <th>7         </th>
+    <th>0.00164747 </th>
     <th>8         </th>
-    <th>2.9216e-3 </th>
-    <th>6         </th>
-    <th>1.7416e-3 </th>
-    <th>6         </th>
-    <th>1.5143e-3 </th>
-    <th>7         </th>
-    <th>7.6307e-4 </th>
-    <th>7         </th>
+    <th>0.000557647 </th>
+    <th>8         </th>
+    <th>0.000135724 </th>
+    <th>8         </th>
+    <th>2.36672e-05 </th>
+    <th>8         </th>
   </tr>
 
   <tr>
     <th>3         </th>
-    <th>&nbsp;    </th>
-    <th>&nbsp;    </th>
-    <th>2.9112e-3(0.03125) </th>
+    <th>2.42953e-09    </th>
     <th>7         </th>
-    <th>6.1170e-4 </th>
+    <th>0.000434195 </th>
     <th>6         </th>
-    <th>5.5466e-4 </th>
+    <th>4.3981e-05 </th>
     <th>6         </th>
-    <th>2.7549e-4 </th>
+    <th>1.78869e-06 </th>
+    <th>7         </th>
+    <th>3.56185e-08 </th>
     <th>7         </th>
   </tr>
 
   <tr>
     <th>4         </th>
-    <th>&nbsp;    </th>
-    <th>&nbsp;    </th>
-    <th>1.7512e-3 </th>
+    <th>3.9881e-14    </th>
+    <th>9         </th>
+    <th>0.00015311 </th>
     <th>6         </th>
-    <th>8.5979e-5 </th>
-    <th>6         </th>
-    <th>1.6631e-4 </th>
-    <th>6         </th>
-    <th>1.6168e-4 </th>
+    <th>7.54086e-08 </th>
     <th>7         </th>
+    <th>1.86834e-10 </th>
+    <th>8         </th>
+    <th>3.08229e-12</th>
+    <th>8         </th>
   </tr>
 
   <tr>
     <th>5         </th>
     <th>&nbsp;    </th>
     <th>&nbsp;    </th>
-    <th>1.2568e-3 </th>
+    <th>2.50725e-05 </th>
     <th>7         </th>
-    <th>1.0373e-6 </th>
-    <th>6         </th>
-    <th>2.0103e-5 </th>
-    <th>6         </th>
-    <th>7.8666e-5 </th>
-    <th>7         </th>
+    <th>7.74134e-12 </th>
+    <th>8         </th>
+    <th>2.05605e-14 </th>
+    <th>10         </th>
+    <th>3.21184e-14 </th>
+    <th>10         </th>
   </tr>
 
   <tr>
     <th>6         </th>
     <th>&nbsp;    </th>
     <th>&nbsp;    </th>
-    <th>7.5972e-4 </th>
-    <th>6         </th>
-    <th>9.6737e-10</th>
+    <th>2.45216e-06 </th>
     <th>7         </th>
-    <th>2.0669e-6 </th>
-    <th>7         </th>
-    <th>5.3016e-5(0.5) </th>
-    <th>7         </th>
+    <th>1.24717e-14</th>
+    <th>10         </th>
+    <th>&nbsp; </th>
+    <th>&nbsp;        </th>
+    <th>&nbsp;    </th>
+    <th>&nbsp;    </th>
   </tr>
 
   <tr>
     <th>7         </th>
     <th>&nbsp;    </th>
     <th>&nbsp;    </th>
-    <th>9.9494e-6 </th>
-    <th>5         </th>
-    <th>4.1740e-15</th>
+    <th>3.18997e-08 </th>
+    <th>7         </th>
+    <th>&nbsp;</th>
+    <th>&nbsp;         </th>
+    <th>&nbsp; </th>
+    <th>&nbsp;         </th>
+    <th>&nbsp;    </th>
+    <th>&nbsp;    </th>
+  </tr>
+
+  <tr>
+    <th>8         </th>
+    <th>&nbsp;    </th>
+    <th>&nbsp;    </th>
+    <th>3.21737e-12 </th>
+    <th>8         </th>
+    <th>&nbsp;    </th>
+    <th>&nbsp;    </th>
+    <th>&nbsp;</th>
+    <th>&nbsp;        </th>
+    <th>&nbsp;    </th>
+    <th>&nbsp;    </th>
+  </tr>
+
+  <tr>
     <th>9         </th>
-    <th>2.0210e-8 </th>
-    <th>7         </th>
-    <th>1.8271e-5 </th>
-    <th>5         </th>
-  </tr>
-
-  <tr>
-    <th>8         </th>
     <th>&nbsp;    </th>
     <th>&nbsp;    </th>
-    <th>3.3137e-8 </th>
-    <th>7         </th>
+    <th>7.03225e-15</th>
+    <th>10         </th>
     <th>&nbsp;    </th>
     <th>&nbsp;    </th>
-    <th>3.0285e-12</th>
-    <th>8         </th>
-    <th>8.9337e-7 </th>
-    <th>7         </th>
-  </tr>
-
-  <tr>
-    <th>9         </th>
+    <th>&nbsp;</th>
+    <th>&nbsp;       </th>
     <th>&nbsp;    </th>
     <th>&nbsp;    </th>
-    <th>3.4340e-13</th>
-    <th>8         </th>
-    <th>&nbsp;    </th>
-    <th>&nbsp;    </th>
-    <th>4.4059e-15</th>
-    <th>10        </th>
-    <th>2.8624e-9 </th>
-    <th>8         </th>
-  </tr>
-
-  <tr>
-    <th>10        </th>
-    <th>&nbsp;    </th>
-    <th>&nbsp;    </th>
-    <th>&nbsp;    </th>
-    <th>&nbsp;    </th>
-    <th>&nbsp;    </th>
-    <th>&nbsp;    </th>
-    <th>&nbsp;    </th>
-    <th>&nbsp;    </th>
-    <th>6.9035e-14</th>
-    <th>9         </th>
   </tr>
 </table>
+The generated grids during solving is shown as below.
+<TABLE WIDTH="60%" ALIGN="center">
+  <tr>
+    <td ALIGN="center">
+      <img src="step-57_Re10000_Mesh0.png" alt="">
+    </td>
+    <td ALIGN="center">
+      <img src="step-57_Re10000_Mesh1.png" alt="">
+    </td>
+  </tr>
+
+  <tr>
+    <td ALIGN="center">
+      <img src="step-57_Re10000_Mesh2.png" alt="">
+    </td>
+    <td ALIGN="center">
+      <img src="step-57_Re10000_Mesh3.png" alt="">
+    </td>
+  </tr>
+
+  <tr>
+    <td ALIGN="center">
+      <img src="step-57_Re10000_Mesh4.png" alt="">
+    </td>
+  </tr>
+</table>
+We compare the solution by Newtion's method with reference solution which can be found in Numerical Solutions of 2-D Steady incompressible driven cavity flow at high Reynolds numbers, E.Erturk, T.C.Corke and C.Gokcol.
+<img src="step-57_Re10000_compare.svg" alt="">
+The following picture presents the graphical result.
+<img src="step-57_Re10000_Streamline.png" alt="">
+
+Furthermore, we have to notice that the error consists of nonlinear error, which can be minished by Newton's iteration, and discrete error. The discrete error depends on the mesh size. That is why we have to refine the mesh and repeat Newton's iteration on the new one. From above table, we can see that the residual(nonlinear error) is under 1e-12 on each mesh, but the following picture shows us the difference among solutions on every mesh. 
+<img src="step-57_Re10000_solutions_on_meshes.svg" alt="">
 
 
 
 
-
-
-
-
-
-
-
-<img src="step-56_Re5000_Newton_converge.svg" alt="">
 
